--- a/HospitalHub/myhub/templates/myhub/hospital_list.html
+++ b/HospitalHub/myhub/templates/myhub/hospital_list.html
@@ -7,12 +7,12 @@
   <div class="container">
     <div class="row">
       <div class="col-md-7">
-        <h1>Doctors</h1>
+        <h1>Hospitals</h1>
       </div>
       <div class="col-md-5">
         <ol class="breadcrumb">
-          <li><a href="{% url 'index' %}">Home</a></li>
-          <li class="active">Doctors</li>
+        <!--  <li><a href="{% url 'index' %}">Home</a></li>
+          <li class="active">Doctors</li>-->
         </ol>
       </div>
     </div>
