--- a/HospitalHub/myhub/templates/partials/_footer.html
+++ b/HospitalHub/myhub/templates/partials/_footer.html
@@ -4,8 +4,13 @@
     <div class="container">
       <div class="row">
         <div class="col-md-3 col-sm-6">
-          <div class="widget"> <img class="ft-logo" src="{% static 'heartcare/images/footer-logo.png' %}" alt="">
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
+          <div class="widget"> <h3>HospitalHub</h3>
+            <p>HospitalHub facilitate users/patients who wish to seek state-of-the-art medical
+              treatment through a peer reviewed and rated system.When in times of medical need, we firmly believe that one should not have to
+              exploit what-not(!) helplessly to find the best treatment. There is a prudent
+              requirement of a reliable peer-reviewed and rated system which is designed to
+              be honest and transparent, to allow users to find the best treatment for their
+              need. </p>
           </div>
         </div>
         <div class="col-md-3 col-sm-6">
