--- a/HospitalHub/myhub/templates/enlisthospital.html
+++ b/HospitalHub/myhub/templates/enlisthospital.html
@@ -11,8 +11,26 @@
 
 </head>
 <body>
-    
+    <!--inner banner-->
+<div class="inner-banner">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-7">
+          <h1>Enlist Hospital!</h1>
+        </div>
+        <div class="col-md-5">
+          <ol class="breadcrumb">
+          <!--  <li><a href="{% url 'index' %}">Home</a></li>
+            <li class="active">Register</li>-->
+          </ol>
+        </div>
+      </div>
+    </div>
+  </div>
+  <!--inner banner End-->
 
+  <div class="main-content">
+    <div class="team-details">
     <div class="container">
         <div class="row">
             <div class="col-md-6">
@@ -35,7 +53,8 @@
             </div>
         </div>
     </div>
-
+  </div>
+</div>
 
 </body>
 {% endblock %}
