--- a/HospitalHub/myhub/templates/enlistuni.html
+++ b/HospitalHub/myhub/templates/enlistuni.html
@@ -8,8 +8,26 @@
 
   </head>
 <body>
-    
+    <!--inner banner-->
+<div class="inner-banner">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-7">
+          <h1>Enlist University!</h1>
+        </div>
+        <div class="col-md-5">
+          <ol class="breadcrumb">
+          <!--  <li><a href="{% url 'index' %}">Home</a></li>
+            <li class="active">Register</li>-->
+          </ol>
+        </div>
+      </div>
+    </div>
+  </div>
+  <!--inner banner End-->
 
+  <div class="main-content">
+    <div class="team-details">
     <div class="container">
         <div class="row">
             <div class="col-md-6">
@@ -32,7 +50,8 @@
             </div>
         </div>
     </div>
-
+  </div>
+</div>
 
 </body>
 {% endblock %}
