--- a/HospitalHub/myhub/templates/myhub/doctor_list.html
+++ b/HospitalHub/myhub/templates/myhub/doctor_list.html
@@ -10,8 +10,8 @@
       </div>
       <div class="col-md-5">
         <ol class="breadcrumb">
-          <li><a href="{% url 'index' %}">Home</a></li>
-          <li class="active">Doctors</li>
+        <!--  <li><a href="{% url 'index' %}">Home</a></li>
+          <li class="active">Doctors</li>-->
         </ol>
       </div>
     </div>
