--- a/HospitalHub/myhub/templates/registration.html
+++ b/HospitalHub/myhub/templates/registration.html
@@ -13,8 +13,8 @@
         </div>
         <div class="col-md-5">
           <ol class="breadcrumb">
-            <li><a href="{% url 'index' %}">Home</a></li>
-            <li class="active">Register</li>
+          <!--  <li><a href="{% url 'index' %}">Home</a></li>
+            <li class="active">Register</li>-->
           </ol>
         </div>
       </div>
