changed user review page

--- a/HospitalHub/myhub/templates/myhub/doctor_detail.html
+++ b/HospitalHub/myhub/templates/myhub/doctor_detail.html
@@ -16,8 +16,8 @@
       </div>
       <div class="col-md-5">
         <ol class="breadcrumb">
-          <li><a href="{% url 'index' %}">Home</a></li>
-          <li class="active">Doctors Details</li>
+          <!--<li><a href="{% url 'index' %}">Home</a></li>
+          <li class="active">Doctors Details</li>-->
         </ol>
       </div>
     </div>
