--- a/HospitalHub/myhub/templates/partials/_header.html
+++ b/HospitalHub/myhub/templates/partials/_header.html
@@ -37,7 +37,7 @@
                   <input type="text" name="search" placeholder="Search" />
               </form></li>
               {% if user.is_authenticated %}
-                <li ><a href="{% url 'user_review_list' user.username %}">User: {{ user.get_username }}</a></li>
+                <li ><a href="{% url 'user_review_list' user.id %}">User: {{ user.get_username }}</a></li>
                 <li><a href="{% url 'logout'%}?next={{request.path}}">Logout</a></li>
                 {% else %}
                 <li ><a href="{% url 'login'%}?next={{request.path}}">Login</a></li>    
