--- a/HospitalHub/myhub/templates/registration.html
+++ b/HospitalHub/myhub/templates/registration.html
@@ -27,7 +27,7 @@
     <div class="contact">
       <div class="container">
         <div class="row">
-          <div class="col-md-12">
+          <div class="col-md-6">
             {% if messages %}
             <div class="alert alert-success" id="alert-msg">
               {% for message in messages %}
@@ -59,8 +59,8 @@
                         <p>{{form.password2}}</p>
                     </div>
                 </div>
-                <div class="col-md-8">
-                  <div class="input-group text-center">
+                <div class="col-md-6">
+                  <div class="input-group ">
                     <input type="submit" class="submit-btn" value="Sign Up Now!">
                   </div>
                 </div>
