--- a/HospitalHub/templates/registration/login.html
+++ b/HospitalHub/templates/registration/login.html
@@ -13,13 +13,7 @@
   <div class="container">
     <div class="row">
       <div class="col-md-7">
-        <h1>Register</h1>
-      </div>
-      <div class="col-md-5">
-        <ol class="breadcrumb">
-          <li><a href="{% url 'index' %}">Home</a></li>
-          <li class="active">Register</li>
-        </ol>
+        <h1>Login</h1>
       </div>
     </div>
   </div>
