--- a/HospitalHub/myhub/static/forms.css
+++ b/HospitalHub/myhub/static/forms.css
@@ -21,7 +21,7 @@
       padding: 10px 10px;
       width: 250px;
       outline: none;
-      color:white;
+      color:black;
       border-radius: 24px;
       transition: 0.25s;
   }
