--- a/HospitalHub/myhub/templates/myhub/hospital_detail.html
+++ b/HospitalHub/myhub/templates/myhub/hospital_detail.html
@@ -17,8 +17,8 @@
       </div>
       <div class="col-md-5">
         <ol class="breadcrumb">
-          <li><a href="{% url 'index' %}">Home</a></li>
-          <li class="active">Hospital Details</li>
+          <!--<li><a href="{% url 'index' %}">Home</a></li>
+          <li class="active">Hospital Details</li>-->
         </ol>
       </div>
     </div>
