--- a/HospitalHub/myhub/templates/myhub/user_review_list.html
+++ b/HospitalHub/myhub/templates/myhub/user_review_list.html
@@ -1,11 +1,35 @@
 {% extends "base_generic.html" %}
 {% block content %}
-<body style="background: linear-gradient(to right,white,blue);">
-<h2>Latest reviews by {{ username }}</h2>
+<body>
+<h2> Latest reviews by {{ user.username }}</h2>
 <br>
 {% if review_list %}
-<table class="table" style="border: none;">
-    <h1>Doctor Review</h1>
+<!--<table class="table" style="border: none;">-->
+    <div class="main-content">
+    <div class="col-md-12">
+        <div class="home-testimonials">
+            <div class="sectio-title-2"> <h3>Doctor Reviews</h3>
+            </div>
+            {% for review in review_list %}
+            <div class="item">
+              <div class="testimonial-holder">
+                <div class="user-thumb"> <img src="{{review.doctor.profile.url}}" alt=""> 
+                  <i>{% for star in review.get_rating %} ⭐ {% endfor %}</i><br><i>{{ review.doctor.first_name }} {{ review.doctor.last_name }}</i> </div>
+                <div class="test-text">
+                  <p>{{ review.comment }}</p>
+                </div>
+              </div>
+            </div>
+            {% endfor %}
+  
+            <!--Slider End-->
+  
+        </div>
+      </div>
+      <!--Testimonials End-->
+      </div>
+    </div>
+    <!--
 <div>
     {% for review in review_list %}
     
@@ -21,31 +45,42 @@
 
     {% endfor %}
 </div>
-</table>
+</table>-->
 {% else %}
 <p>No doctor reviews are available.</p>
 
 {% endif %}
-{% if hospital_review_list %}
-<table class="table" style="border: none;">
-    <h1>Hospital Review</h1>
-<div>
-    {% for review in hospital_review_list %}
-    
-   
-    <tr style="border-bottom: 4px solid grey">
-        <td style=" border: none; font-size:30px;"><a href="{{ review.hospital.get_absolute_url }}">
-            {{ review.hospital.name }} </a></td>
-        <td style=" border: none; font-size:20px;">{% for star in review.get_rating %} ⭐ {% endfor %}</td>
-        <td style=" border: none; font-size:20px;">{{ review.comment }}</td>
-    
-    </tr>
 
-    {% endfor %}
+<br>
+{% if hospital_review_list %}
+<div class="col-md-12">
+    <div class="home-testimonials">
+        <br>
+        <div class="sectio-title-2"> <h3>Hospital Reviews</h3>
+        </div>
+        {% for review in hospital_review_list %}
+        <div class="item">
+          <div class="testimonial-holder">
+            <div class="user-thumb"> <img src="{{review.hospital.profile.url}}" alt=""> 
+              <i>{% for star in review.get_rating %} ⭐ {% endfor %}</i><br><i>{{ review.hospital.name }}</i> </div>
+            <div class="test-text">
+              <p>{{ review.comment }}</p>
+            </div>
+          </div>
+        </div>
+        {% endfor %}
+
+        <!--Slider End-->
+
+    </div>
+  </div>
+  <!--Testimonials End-->
+  </div>
 </div>
-</table>
+
 {% else %}
 <p>No hospital reviews are available.</p>
 {% endif %}
+</div>
 </body>
 {% endblock %}
