--- a/HospitalHub/myhub/templates/enlistdegree.html
+++ b/HospitalHub/myhub/templates/enlistdegree.html
@@ -26,12 +26,12 @@
 </div>
 <!--inner banner End-->
 
-<div class="main-content">
-  <div class="team-details">
-    <div class="container">
-        <div class="row">
-            <div class="col-md-6">
-                <div class="card">
+<div class="main-content-enlist" >
+  <div class="" team-details>
+    <div class="" container>
+        <div class="" row>
+            <div class="col-md-3">
+                <div class="" card>
                     <form class="box" method="post" action="{% url 'enlistdegree' %}">
                         {% csrf_token %}
                        <p> <h1>Enlist Degree</h1></p>
