--- a/HospitalHub/myhub/templates/enlistdoctor.html
+++ b/HospitalHub/myhub/templates/enlistdoctor.html
@@ -25,12 +25,9 @@
     </div>
   </div>
   <!--inner banner End-->
-  <div class="main-content">
-    <div class="team-details">
-    <div class="container">
-        <div class="row">
-            <div class="col-md-6">
-                <div class="card">
+  <div class="main-content-enlist">
+            <div class="col-md-3">
+                <div class="" card>
                     <form class="box" method="post" action="{% url 'enlistdoctor' %}">
                         {% csrf_token %}
                        <p> <h1>Enlist Doctor</h1></p>
@@ -47,9 +44,7 @@
                     </form>
                 </div>
             </div>
-        </div>
-    </div>
-  </div>
+        
 </div>
 
 </body>
