--- a/HospitalHub/myhub/templates/enlisthospital.html
+++ b/HospitalHub/myhub/templates/enlisthospital.html
@@ -29,12 +29,10 @@
   </div>
   <!--inner banner End-->
 
-  <div class="main-content">
-    <div class="team-details">
-    <div class="container">
-        <div class="row">
-            <div class="col-md-6">
-                <div class="card">
+  <div class="main-content-enlist">
+    
+            <div class="col-md-3">
+                <div class="" card>
                     <form class="box" method="post" action="{% url 'enlisthospital' %}">
                         {% csrf_token %}
                        <p> <h1>Enlist Hospital</h1></p>
@@ -51,9 +49,6 @@
                     </form>
                 </div>
             </div>
-        </div>
-    </div>
-  </div>
 </div>
 
 </body>
