--- a/HospitalHub/myhub/templates/enlistuni.html
+++ b/HospitalHub/myhub/templates/enlistuni.html
@@ -26,12 +26,9 @@
   </div>
   <!--inner banner End-->
 
-  <div class="main-content">
-    <div class="team-details">
-    <div class="container">
-        <div class="row">
-            <div class="col-md-6">
-                <div class="card">
+  <div class="main-content-enlist">
+            <div class="col-md-3">
+                <div class="" card>
                     <form class="box" method="post" action="{% url 'enlistuni' %}">
                         {% csrf_token %}
                        <p> <h1>Enlist UNI</h1></p>
@@ -48,9 +45,6 @@
                     </form>
                 </div>
             </div>
-        </div>
-    </div>
-  </div>
 </div>
 
 </body>
