--- a/HospitalHub/templates/registration/login.html
+++ b/HospitalHub/templates/registration/login.html
@@ -34,12 +34,9 @@
      
    
  
-<div class="main-content">
-  <div class="team-details">
-  <div class="container">
-    <div class="row">
-        <div class="col-sm-6 " >
-            <div class="card">
+<div class="main-content-enlist">
+        <div class="col-md-3 " >
+            <div class="" card>
                 <form class="box" method="post" action="{% url 'login' %}">
                     {% csrf_token %}
                     <h1>Login</h1>
