--- a/HospitalHub/myhub/templates/partials/_header.html
+++ b/HospitalHub/myhub/templates/partials/_header.html
@@ -10,8 +10,8 @@
                 data-target="#bs-example-navbar-collapse-1" aria-expanded="false"> <span class="sr-only">Toggle
                   navigation</span> <span class="icon-bar"></span> <span class="icon-bar"></span> <span
                   class="icon-bar"></span> </button>
-              <a class="navbar-brand" href="{% url 'index' %}"><!--<img src="" {% static 'heartcare/images/logo.png' %}"
-                  alt="">-->HospitalHub</a> </div>
+              <a class="navbar-brand" href="{% url 'index' %}"><img src="{% static 'heartcare/images/logo.png' %}"
+                  alt="" width="190px" height="60px"> </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
