--- a/HospitalHub/myhub/templates/index.html
+++ b/HospitalHub/myhub/templates/index.html
@@ -56,9 +56,8 @@
           </div>
           <div class="col-md-4 col-sm-4">
             <div class="features-box">
-              <h3>Doctors</h3>
-              <p>{{num_doctors}}</p>
-              <a href="contact-2.html">Contact Us</a>
+              <h3>Reviews</h3>
+              <p>{{num_reviews}}</p>
             </div>
           </div>
         </div>
@@ -70,18 +69,17 @@
         <div class="row">
   
           <!--Testimonials Start-->
-          <div class="col-md-6">
+          <div class="col-md-12">
             <div class="home-testimonials">
-              <div class="sectio-title-2"> <strong>Read What Says Our</strong>
-                <h2>Happy Patients</h2>
+              <div class="sectio-title-2"> <strong>Read Our</strong>
+                <h2>Latest Reviews</h2>
               </div>
               <div id="testimonial-slider" class="owl-carousel owl-theme">
   
                 <!--Slider Start-->
                 <div class="item">
                   <div class="testimonial-holder">
-                    <div class="user-thumb"> <img src="{% static 'heartcare/images/tuser.jpg' %}" alt=""> <strong>Anna
-                        Anderson</strong>
+                    <div class="user-thumb"> <img src="{% static 'heartcare/images/tuser.jpg' %}" alt=""> <strong>Shrimati Pankaja</strong>
                       <i>A heart patient</i> </div>
                     <div class="test-text">
                       <p>An exellent hospital and a Cardiologists. Quisque egestas libero vitae lacus sagittis, eget
@@ -93,9 +91,8 @@
                 </div>
                 <div class="item">
                   <div class="testimonial-holder">
-                    <div class="user-thumb"> <img src="{% static 'heartcare/images/tuser-2.jpg' %}" alt=""> <strong>Anna
-                        Anderson</strong>
-                      <i>A heart patient</i> </div>
+                    <div class="user-thumb"> <img src="{% static 'heartcare/images/tuser-2.jpg' %}" alt=""> <strong>Shri Joshi</strong>
+                      <i>A brain patient</i> </div>
                     <div class="test-text">
                       <p>An exellent hospital and a Cardiologists. Quisque egestas libero vitae lacus sagittis, eget
                         viverra tellus vehicula. Aenean efficitur faucibus felis, non laoreet nisl congue non. In quis
@@ -106,9 +103,8 @@
                 </div>
                 <div class="item">
                   <div class="testimonial-holder">
-                    <div class="user-thumb"> <img src="{% static 'heartcare/images/tuser.jpg' %}" alt=""> <strong>Anna
-                        Anderson</strong>
-                      <i>A heart patient</i> </div>
+                    <div class="user-thumb"> <img src="{% static 'heartcare/images/tuser.jpg' %}" alt=""> <strong>Shrimati Sathe</strong>
+                      <i>A neck patient</i> </div>
                     <div class="test-text">
                       <p>An exellent hospital and a Cardiologists. Quisque egestas libero vitae lacus sagittis, eget
                         viverra tellus vehicula. Aenean efficitur faucibus felis, non laoreet nisl congue non. In quis
