--- a/HospitalHub/myhub/templates/partials/_footer.html
+++ b/HospitalHub/myhub/templates/partials/_footer.html
@@ -18,8 +18,8 @@
             <h3>COMPANY</h3>
             <ul>
               <li><a href="">About Us</a></li>
-              <li><a href="">Privacy</a></li>
-              <li><a href="">Help</a></li>
+              <li><a href="{% url 'privacy' %}">Privacy</a></li>
+              <li><a href=""></a></li>
             </ul>
           </div>
         </div>
