--- a/HospitalHub/myhub/templates/enlisthospital.html
+++ b/HospitalHub/myhub/templates/enlisthospital.html
@@ -33,7 +33,7 @@
     
             <div class="col-md-3">
                 <div class="" card>
-                    <form class="box" method="post" action="{% url 'enlisthospital' %}">
+                    <form class="box" method="post" action="{% url 'enlisthospital' %}" enctype="multipart/form-data">
                         {% csrf_token %}
                        <p> <h1>Enlist Hospital</h1></p>
                         {%for fields in formhospital%}
