--- a/HospitalHub/myhub/templates/enlisthospital.html
+++ b/HospitalHub/myhub/templates/enlisthospital.html
@@ -40,6 +40,10 @@
                         <p style="color: white;">{{fields.label_tag}}</p>
                         <p>{{fields}}</p>
                         {%endfor%}
+                        {%for fields in formpincode%}
+                        <p style="color: white;">{{fields.label_tag}}</p>
+                        <p>{{fields}}</p>
+                        {%endfor%}
                         <button class="btn btn-outline-info" type="submit">Sign Up</button>
 
                    
