Uses procedure. Aligns user_review_list.html. Completes trigger.

--- a/HospitalHub/myhub/templates/base_generic.html
+++ b/HospitalHub/myhub/templates/base_generic.html
@@ -22,7 +22,7 @@
     {% include 'partials/_header.html' %}
     <!--Header End-->
     <!--Main Slider-->
-    {% include 'partials/_slider.html' with sliders=sliders %}
+    {% include 'partials/_slider.html'%}
     <!--Main Slider End-->
 
     <!-- Main Content Start -->
