--- a/HospitalHub/myhub/templates/partials/_slider.html
+++ b/HospitalHub/myhub/templates/partials/_slider.html
@@ -4,32 +4,32 @@
       <div class="item">
           <div class="slide-caption slide-2">
             <div class="container">
-              <h1>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</h1>
-              <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-              <a class="btn-1" href="#">Hospitals</a> <a class="btn-1" href="#">Doctors</a>
+              <h1>Asian Eye Hospital</h1>
+              <p>Computerized eye examination, Pentacam, FFA, OCT and to advanced treatments like LASIK, RELEX SMILE, advanced cataract, premium lens implant, diabetic retinopathy, corneal transplant to complicated retinal diseases.</p>
+              
             </div>
           </div>
-          <span class="simg"><img src="{%static 'images/doctor.jpg'%}}" alt=""></span>
+          <span class="simg"><img src="{%static 'hospitalhub/images/Banner5.jpg'%}" alt=""></span>
         </div>
         <div class="item">
             <div class="slide-caption slide-2">
               <div class="container">
-                <h1>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</h1>
-                <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-                <a class="btn-1" href="#">Hospitals</a> <a class="btn-1" href="#">Doctors</a>
+                <h1>Gupte Hospital - The best pregnancy and maternity care hospital in pune.</h1>
+                <p>Our forte is that the hospital has qualified OBGYN consultants 24 X 7 available in the premises.</p>
               </div>
             </div>
-            <span class="simg"><img src="{%static 'images/doctor.jpg'%}}" alt=""></span>
+            <span class="simg"><img src="{%static 'hospitalhub/images/gupte_hospital.png'%}" alt=""></span>
           </div>
           <div class="item">
             <div class="slide-caption slide-2">
               <div class="container">
-                <h1>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</h1>
-                <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+                <h1>Best Kidney Transplant!</h1>
+                <p>KEM Hospital, Pune</p>
                 <a class="btn-1" href="#">Hospitals</a> <a class="btn-1" href="#">Doctors</a>
               </div>
             </div>
-            <span class="simg"><img src="{%static 'images/doctor.jpg'%}}" alt=""></span>
+            <span class="simg"><img src="{%static 'hospitalhub/images/kidney-transplant2.jpg'%}" alt=""></span>
           </div>
     </div>
   </div>
+  
