Adds JSON file for enlisting doctors. Fixes bug that squashes slider appearing on every page.

--- a/HospitalHub/myhub/templates/index.html
+++ b/HospitalHub/myhub/templates/index.html
@@ -2,7 +2,9 @@
 {% load static %}
 {% block content %}
 <!--<img src="{%static 'images/review.png'%}" style="width: 1860px;height: 750px;" >-->
-
+    <!--Main Slider-->
+    {% include 'partials/_slider.html'%}
+    <!--Main Slider End-->
 <div class="main-content">
   <!--Welcome Section-->
   <section class="welcome-section">
