--- a/HospitalHub/myhub/templates/index.html
+++ b/HospitalHub/myhub/templates/index.html
@@ -31,7 +31,7 @@
             </div>
           </div>
           <div class="col-md-6 col-sm-6">
-            <div class="welcome-img"> <img src="{% static 'hospitalhub/images/homepage.jpg' %}" alt=""> </div>
+            <div class=""> <img src="{% static 'hospitalhub/images/HospitalHub-Large.png' %}" alt=""> </div>
           </div>
         </div>
       </div>
