--- a/HospitalHub/myhub/templates/myhub/doctor_detail.html
+++ b/HospitalHub/myhub/templates/myhub/doctor_detail.html
@@ -74,7 +74,7 @@
           </div>
         </div>
               <!--Slider Start-->
-          {% for review in doctor.doctor_review_set.all %}
+          {% for review in doctor.doctor_review_set.all|dictsortreversed:"pub_date" %}
           <div class="item">
             <div class="testimonial-holder">
               <div class="user-thumb"> <img src="{{ review.user_name.user.profile }}" alt=""> <h3>{{ review.user_name }}</h3>
