--- a/HospitalHub/myhub/templates/myhub/hospital_detail.html
+++ b/HospitalHub/myhub/templates/myhub/hospital_detail.html
@@ -75,7 +75,7 @@
           </div>
         </div>
               <!--Slider Start-->
-          {% for review in hospital.hospital_review_set.all %}
+          {% for review in hospital.hospital_review_set.all|dictsortreversed:"pub_date" %}
           <div class="item">
             <div class="testimonial-holder">
               <div class="user-thumb"> <img src="{{ review.user_name.profile }}" alt=""> <h3>{{ review.user_name }}</h3>
